--- a/01-playbook.yaml
+++ b/01-playbook.yaml
@@ -1,4 +1,4 @@
-- name: ping the server
+- name: "ping the server"
   hosts: frontend # Which server you are connecting to
   # List of tasks/collections/modules
   tasks:
