--- a/10-vars-preference.yaml
+++ b/10-vars-preference.yaml
@@ -5,10 +5,10 @@
     NAME: from play level
   # vars_files:
   # - course.yaml
-  vars_prompt:
-  - name: NAME
-    prompt: What is your NAME?
-    private: false  
+  # vars_prompt:
+  # - name: NAME
+  #   prompt: What is your NAME?
+  #   private: false  
   tasks:
   - name: testing variables preference
     # vars:
@@ -19,3 +19,4 @@
 # 1. args or command line
 # 2. from prompt
 # 3. files
+# 4. prompt
