--- a/16-loops.yaml
+++ b/16-loops.yaml
@@ -1,9 +1,10 @@
 - name: Install pacakges
   hosts: local
   connection: local
+  become: yes
   tasks:
   - name: print names
-    ansible.builtin.pacakge:
+    ansible.builtin.package:
       name: "{{ item }}"
       state: latest
     loop:
