--- a/18-functions.yaml
+++ b/18-functions.yaml
@@ -4,6 +4,7 @@
   vars:
     technologies: DevOps, Linux, Shell, Ansible # string
     name: "Sivakumar reddy M"
+    gmail: Info@GMAIL.COM
     # dictionary == map
     tags:
       Application: payment
@@ -48,3 +49,7 @@
   - name: convert uppercase
     ansible.builtin.debug:
       msg: "{{ name | upper }}"
+
+  - name: convert lowercase
+    ansible.builtin.debug:
+      msg: "{{ gmail | lower }}"
